fixed bg on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ body {
   padding: 0;
   height: 100vh;
   min-height: 400px;
+}
+.mobile_wrapper {
   overflow: hidden;
+  position: relative;
 }
 .wrapper {
   min-height: 100vh;
